--- a/data/effect_mark.yaml
+++ b/data/effect_mark.yaml
@@ -208,6 +208,8 @@
 - id: effect_turn_damage
   trigger: TurnEnd
   priority: 0
+  condition:
+    type: petIsActive
   apply:
     type: dealDamage
     target:
@@ -321,3 +323,191 @@
     percent:
       type: raw:number
       value: 25
+- id: effect_decrease_heal
+  trigger: OnHeal
+  priority: 0
+  apply:
+    type: addModified
+    target:
+      base: healContext
+    percent:
+      type: raw:number
+      value: -15
+    delta:
+      type: raw:number
+      value: 0
+- id: effect_damage_with_stack
+  trigger: TurnEnd
+  condition:
+    type: petIsActive
+  priority: 0
+  apply:
+    type: dealDamage
+    target:
+      base: self
+    value:
+      type: dynamic
+      selector:
+        base: mark
+        chain:
+          - type: select
+            arg:
+              type: base
+              arg: stack
+- id: effect_reduce_hit_rate_50
+  trigger: OnMarkCreate
+  priority: 0
+  apply:
+    type: modifyStat
+    target:
+      base: self
+    statType:
+      type: raw:string
+      value: accuracy
+    value:
+      type: raw:number
+      value: 0
+    percent:
+      type: raw:number
+      value: -50
+- id: effect_restore_hit_rate
+  trigger: OnMarkDestroy
+  priority: 0
+  apply:
+    type: modifyStat
+    target:
+      base: self
+    statType:
+      type: raw:string
+      value: accuracy
+    value:
+      type: raw:number
+      value: 0
+    percent:
+      type: raw:number
+      value: 50
+- id: effect_absorb_hp_to_foe
+  trigger: TurnEnd
+  condition:
+    type: petIsActive
+  priority: 0
+  apply:
+    type: heal
+    target:
+      base: foe
+    value:
+      type: dynamic
+      selector:
+        base: self
+        chain:
+          - type: select
+            arg:
+              type: base
+              arg: hp
+          - type: divide
+            arg:
+              type: raw:number
+              value: 8
+          - type: clampMax
+            arg:
+              type: dynamic
+              selector:
+                base: foe
+                chain:
+                  - type: select
+                    arg:
+                      type: base
+                      arg: maxhp
+                  - type: divide
+                    arg:
+                      type: raw:number
+                      value: 8
+- id: effect_posion_damage
+  trigger: TurnEnd
+  priority: 0
+  condition:
+    type: petIsActive
+  apply:
+    type: dealDamage
+    target:
+      base: self
+    value:
+      type: dynamic
+      selector:
+        base: mark
+        chain:
+          - type: select
+            arg:
+              type: base
+              arg: stack
+          - type: multiply
+            arg:
+              type: raw:number
+              value: 10
+- id: effect_reduce_speed_on_mark_create
+  trigger: OnMarkCreate
+  priority: 0
+  apply:
+    type: modifyStat
+    target:
+      base: self
+    statType:
+      type: raw:string
+      value: spe
+    value:
+      type: raw:number
+      value: -50
+    percent:
+      type: raw:number
+      value: 0
+- id: effect_restore_speed_on_mark_destroy
+  trigger: OnMarkDestroy
+  priority: 0
+  apply:
+    type: modifyStat
+    target:
+      base: self
+    statType:
+      type: raw:string
+      value: spe
+    value:
+      type: raw:number
+      value: 50
+    percent:
+      type: raw:number
+      value: 0
+- id: effect_increase_damage_taken
+  trigger: OnDamage
+  condition:
+    type: selfBeDamaged
+  priority: 0
+  apply:
+    type: addModified
+    target:
+      base: damageContext
+    delta:
+      type: raw:number
+      value: 0
+    percent:
+      type: dynamic
+      selector:
+        base: mark
+        chain:
+          - type: select
+            arg:
+              type: base
+              arg: stack
+          - type: multiply
+            arg:
+              type: raw:number
+              value: 10 # Increase damage by 10% per stack
+- id: effect_self_damage_on_expire
+  trigger: OnMarkDurationEnd
+  priority: 0
+  apply:
+    type: dealDamage
+    target:
+      base: self
+    value:
+      type: raw:number
+      value: 300
