--- a/data/effect_mark.yaml
+++ b/data/effect_mark.yaml
@@ -84,7 +84,7 @@
           base: damageContext
           chain:
             - type: selectPath
-              arg: value
+              arg: damageResult
         evaluator:
           type: compare
           operator: '>='
