--- a/data/effect_mark.yaml
+++ b/data/effect_mark.yaml
@@ -1,8 +1,8 @@
-# data/effect_mark.yaml
+# data/effect_mark_mark.yaml
 # yaml-language-server: $schema=../packages/schema/schema/effect.schema.json
 # @metaType effect
 # @version 1.0.0
-- id: effect_stun
+- id: effect_mark_stun
   trigger: BeforeUseSkillCheck
   priority: 0
   condition:
@@ -10,7 +10,7 @@
   apply:
     type: stun
     target: usingSkillContext
-- id: effect_cant_evasion
+- id: effect_mark_cant_evasion
   trigger: BeforeUseSkillCheck
   priority: 0
   condition:
@@ -19,7 +19,7 @@
     type: setSureHit
     target: usingSkillContext
     priority: 1
-- id: effect_40probability_stun
+- id: effect_mark_40probability_stun
   trigger: BeforeUseSkillCheck
   priority: 0
   condition:
@@ -36,7 +36,7 @@
   apply:
     type: stun
     target: usingSkillContext
-- id: effect_onDamage_recovery
+- id: effect_mark_onDamage_recovery
   trigger: PostDamage
   priority: 0
   condition:
@@ -45,7 +45,7 @@
     type: destroyMark
     target:
       base: mark
-- id: effect_onCritDamage_recovery
+- id: effect_mark_onCritDamage_recovery
   trigger: OnCritPostDamage
   priority: 0
   condition:
@@ -54,7 +54,7 @@
     type: destroyMark
     target:
       base: mark
-- id: effect_randomUseSkill
+- id: effect_mark_randomUseSkill
   trigger: BeforeUseSkillCheck
   priority: 0
   condition:
@@ -72,7 +72,7 @@
             arg:
               type: raw:number
               value: 1
-- id: effect_onDamage_over100_recovery
+- id: effect_mark_onDamage_over100_recovery
   trigger: PostDamage
   priority: 0
   condition:
@@ -95,7 +95,7 @@
     type: destroyMark
     target:
       base: mark
-- id: effect_curse_add_random_status
+- id: effect_mark_curse_add_random_status
   trigger: OnMarkDestroy
   priority: 0
   apply:
@@ -118,7 +118,7 @@
             arg:
               type: raw:number
               value: 1
-- id: effect_prevent_damage
+- id: effect_mark_prevent_damage
   trigger: OnDamage
   priority: 0
   condition:
@@ -126,7 +126,7 @@
   apply:
     type: preventDamage
     target: damageContext
-- id: effect_confuse
+- id: effect_mark_confuse
   trigger: BeforeUseSkillCheck
   priority: 0
   condition:
@@ -137,7 +137,7 @@
     newTarget:
       type: dynamic
       selector: self
-- id: effect_taunt
+- id: effect_mark_taunt
   trigger: BeforeUseSkillCheck
   priority: 0
   condition:
@@ -160,7 +160,7 @@
   apply:
     type: stun
     target: usingSkillContext
-- id: effect_physical_stun
+- id: effect_mark_physical_stun
   trigger: BeforeUseSkillCheck
   priority: 0
   condition:
@@ -181,7 +181,7 @@
   apply:
     type: stun
     target: usingSkillContext
-- id: effect_silence
+- id: effect_mark_silence
   trigger: BeforeUseSkillCheck
   priority: 0
   condition:
@@ -205,7 +205,7 @@
     type: setSureMiss
     priority: 1
     target: usingSkillContext
-- id: effect_turn_damage
+- id: effect_mark_turn_damage
   trigger: TurnEnd
   priority: 0
   condition:
@@ -227,7 +227,7 @@
             arg:
               type: raw:number
               value: 8
-- id: effect_reduce_hit_rate
+- id: effect_mark_reduce_hit_rate
   trigger: OnMarkCreate
   priority: 0
   apply:
@@ -243,7 +243,7 @@
     percent:
       type: raw:number
       value: -10
-- id: effect_reset_hit_rate
+- id: effect_mark_reset_hit_rate
   trigger: OnMarkDestroy
   priority: 0
   apply:
@@ -259,7 +259,7 @@
     percent:
       type: raw:number
       value: 10
-- id: effect_decrease_atk
+- id: effect_mark_decrease_atk
   trigger: OnMarkCreate
   priority: 0
   apply:
@@ -275,7 +275,7 @@
     percent:
       type: raw:number
       value: -25
-- id: effect_decrease_atk_reset
+- id: effect_mark_decrease_atk_reset
   trigger: OnMarkCreate
   priority: 0
   apply:
@@ -291,7 +291,7 @@
     percent:
       type: raw:number
       value: 25
-- id: effect_decrease_spa
+- id: effect_mark_decrease_spa
   trigger: OnMarkCreate
   priority: 0
   apply:
@@ -307,7 +307,7 @@
     percent:
       type: raw:number
       value: -25
-- id: effect_decrease_spa_reset
+- id: effect_mark_decrease_spa_reset
   trigger: OnMarkCreate
   priority: 0
   apply:
@@ -323,7 +323,7 @@
     percent:
       type: raw:number
       value: 25
-- id: effect_decrease_heal
+- id: effect_mark_decrease_heal
   trigger: OnHeal
   priority: 0
   apply:
@@ -336,7 +336,7 @@
     delta:
       type: raw:number
       value: 0
-- id: effect_damage_with_stack
+- id: effect_mark_damage_with_stack
   trigger: TurnEnd
   condition:
     type: petIsActive
@@ -354,7 +354,7 @@
             arg:
               type: base
               arg: stack
-- id: effect_reduce_hit_rate_50
+- id: effect_mark_reduce_hit_rate_50
   trigger: OnMarkCreate
   priority: 0
   apply:
@@ -370,7 +370,7 @@
     percent:
       type: raw:number
       value: -50
-- id: effect_restore_hit_rate
+- id: effect_mark_restore_hit_rate
   trigger: OnMarkDestroy
   priority: 0
   apply:
@@ -386,7 +386,7 @@
     percent:
       type: raw:number
       value: 50
-- id: effect_absorb_hp_to_foe
+- id: effect_mark_absorb_hp_to_foe
   trigger: TurnEnd
   condition:
     type: petIsActive
@@ -422,7 +422,7 @@
                     arg:
                       type: raw:number
                       value: 8
-- id: effect_posion_damage
+- id: effect_mark_posion_damage
   trigger: TurnEnd
   priority: 0
   condition:
@@ -444,7 +444,7 @@
             arg:
               type: raw:number
               value: 10
-- id: effect_reduce_speed_on_mark_create
+- id: effect_mark_reduce_speed_on_mark_create
   trigger: OnMarkCreate
   priority: 0
   apply:
@@ -460,7 +460,7 @@
     percent:
       type: raw:number
       value: 0
-- id: effect_restore_speed_on_mark_destroy
+- id: effect_mark_restore_speed_on_mark_destroy
   trigger: OnMarkDestroy
   priority: 0
   apply:
@@ -476,7 +476,7 @@
     percent:
       type: raw:number
       value: 0
-- id: effect_increase_damage_taken
+- id: effect_mark_increase_damage_taken
   trigger: OnDamage
   condition:
     type: selfBeDamaged
@@ -501,7 +501,7 @@
             arg:
               type: raw:number
               value: 10 # Increase damage by 10% per stack
-- id: effect_self_damage_on_expire
+- id: effect_mark_self_damage_on_expire
   trigger: OnMarkDurationEnd
   priority: 0
   apply:
